--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,10 @@
         <assertj.version>3.6.2</assertj.version>
         <junit-hierarchicalcontextrunner.version>4.12.1</junit-hierarchicalcontextrunner.version>
         <mockito-java8.version>0.3.1</mockito-java8.version>
+
+        <jacoco-class-line-covered-ratio>0</jacoco-class-line-covered-ratio>
+        <jacoco-class-instruction-covered-ratio>0</jacoco-class-instruction-covered-ratio>
+        <jacoco-class-missed-count-maximum>0</jacoco-class-missed-count-maximum>
     </properties>
 
     <dependencies>
