jenkins: add jenkinsfile

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>com.hubio</groupId>
     <artifactId>s3sftp-parent</artifactId>
-    <version>1.0.0</version>
+    <version>DEV-SNAPSHOT</version>
 
     <name>S3 SFTP Server (parent)</name>
     <description>SFTP Server to access an Amazon S3 Bucket</description>
