--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,13 +6,16 @@
     <parent>
         <artifactId>s3sftp-parent</artifactId>
         <groupId>com.hubio</groupId>
-        <version>1.0.0</version>
+        <version>DEV-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
 
     <artifactId>s3sftp-server</artifactId>
-    <name>S3 SFTP Server</name>
+    <name>S3 SFTP Server (server)</name>
 
     <properties>
+        <java.version>1.8</java.version>
+        <spring-boot.version>1.5.14.RELEASE</spring-boot.version>
         <apache-sshd.version>1.3.0</apache-sshd.version>
         <map-builder.version>1.0.0</map-builder.version>
         <bouncycastle.version>1.54</bouncycastle.version>
@@ -23,6 +26,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.sshd</groupId>
             <artifactId>sshd-core</artifactId>
