--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -56,6 +56,7 @@
         <junit-hierarchicalcontextrunner.version>4.12.1</junit-hierarchicalcontextrunner.version>
         <mockito-java8.version>0.3.1</mockito-java8.version>
         <lombok.version>1.18.0</lombok.version>
+        <aws-java-sdk.version>1.11.375</aws-java-sdk.version>
     </properties>
 
     <build>
