--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -57,6 +57,7 @@
         <mockito-java8.version>2.3.0</mockito-java8.version>
         <lombok.version>1.18.2</lombok.version>
         <aws-java-sdk.version>1.11.400</aws-java-sdk.version>
+        <guava.version>26.0-jre</guava.version>
     </properties>
 
     <build>
@@ -134,6 +135,16 @@
                 <artifactId>bcprov-jdk15on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
+            <dependency><!-- override version from s3fs to avoid security flaw -->
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency><!-- override version from s3fs to avoid security flaw -->
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-s3</artifactId>
+                <version>${aws-java-sdk.version}</version>
+            </dependency>
             <!-- S3 Filesystem -->
             <dependency>
                 <!-- S3 filesystem provider for Java 7. -->
@@ -144,22 +155,25 @@
 
             <!-- Unit Testing -->
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>de.bechte.junit</groupId>
                 <artifactId>junit-hierarchicalcontextrunner</artifactId>
                 <version>${junit-hierarchicalcontextrunner.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>info.solidsoft.mockito</groupId>
                 <artifactId>mockito-java8</artifactId>
                 <version>${mockito-java8.version}</version>
-                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
