--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -107,7 +107,7 @@
 
             <dependency>
                 <groupId>org.apache.sshd</groupId>
-                <artifactId>sshd-core</artifactId>
+                <artifactId>sshd-sftp</artifactId>
                 <version>${apache-sshd.version}</version>
             </dependency>
             <dependency>
