--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
+            <artifactId>sshd-sftp</artifactId>
         </dependency>
         <dependency>
             <groupId>me.andrz</groupId>
