--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -44,7 +44,7 @@
 
     <properties>
         <tiles-maven-plugin.version>2.12</tiles-maven-plugin.version>
-        <kemitix-tiles.version>0.9.0</kemitix-tiles.version>
+        <kemitix-tiles.version>1.2.0</kemitix-tiles.version>
         <kemitix-checkstyle.version>4.1.1</kemitix-checkstyle.version>
         <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
         <digraph-dependency.basePackage>com.hubio.s3sftp</digraph-dependency.basePackage>
@@ -58,6 +58,7 @@
         <lombok.version>1.18.2</lombok.version>
         <aws-java-sdk.version>1.11.404</aws-java-sdk.version>
         <guava.version>26.0-jre</guava.version>
+        <mon.version>1.1.0</mon.version>
     </properties>
 
     <build>
@@ -71,7 +72,7 @@
                     <tiles>
                         <tile>net.kemitix.tiles:maven-plugins:${kemitix-tiles.version}</tile>
                         <tile>net.kemitix.tiles:enforcer:${kemitix-tiles.version}</tile>
-                        <tile>net.kemitix.tiles:compiler:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:compiler-jdk-8:${kemitix-tiles.version}</tile>
                         <tile>net.kemitix.tiles:huntbugs:${kemitix-tiles.version}</tile>
                         <tile>net.kemitix.tiles:pmd:${kemitix-tiles.version}</tile>
                         <tile>net.kemitix.tiles:digraph:${kemitix-tiles.version}</tile>
@@ -86,6 +87,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>net.kemitix</groupId>
+                <artifactId>mon</artifactId>
+                <version>${mon.version}</version>
+            </dependency>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
