--- a/server/pom.xml
+++ b/server/pom.xml
@@ -91,4 +91,27 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.repaint.maven</groupId>
+                <artifactId>tiles-maven-plugin</artifactId>
+                <version>${tiles-maven-plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <tiles>
+                        <tile>net.kemitix.tiles:maven-plugins:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:enforcer:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:compiler-jdk-8:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:huntbugs:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:pmd:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:digraph:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:testing:${kemitix-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:coverage:${kemitix-tiles.version}</tile>
+                    </tiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
