--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -52,6 +52,8 @@
         <map-builder.version>1.0.0</map-builder.version>
         <bouncycastle.version>1.60</bouncycastle.version>
         <s3fs.version>2.2.2</s3fs.version>
+        <junit.version>5.2.0</junit.version>
+        <mockito.version>2.20.1</mockito.version>
         <assertj.version>3.11.1</assertj.version>
         <junit-hierarchicalcontextrunner.version>4.12.1</junit-hierarchicalcontextrunner.version>
         <mockito-java8.version>2.4.0</mockito-java8.version>
@@ -137,20 +139,21 @@
 
             <!-- Unit Testing -->
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring-boot.version}</version>
-                <scope>test</scope>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>de.bechte.junit</groupId>
-                <artifactId>junit-hierarchicalcontextrunner</artifactId>
-                <version>${junit-hierarchicalcontextrunner.version}</version>
             </dependency>
             <dependency>
                 <groupId>info.solidsoft.mockito</groupId>
