--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>net.kemitix.s3sftp</groupId>
     <artifactId>parent</artifactId>
-    <version>DEV-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <name>S3 SFTP Server (parent)</name>
     <description>SFTP Server to access an Amazon S3 Bucket</description>
