--- a/server/pom.xml
+++ b/server/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency><!-- override version from s3fs and aws-java-sdk-s3 to avoid security flaw -->
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <dependency><!-- override version from s3fs to avoid security flaw -->
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
