--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -62,6 +62,7 @@
         <aws-java-sdk.version>1.11.457</aws-java-sdk.version>
         <guava.version>27.0.1-jre</guava.version>
         <mon.version>2.0.0</mon.version>
+        <jackson-databind.version>2.9.7</jackson-databind.version>
     </properties>
 
     <build>
@@ -146,6 +147,11 @@
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-s3</artifactId>
                 <version>${aws-java-sdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <!-- S3 Filesystem -->
             <dependency>
