--- a/server/pom.xml
+++ b/server/pom.xml
@@ -65,6 +65,10 @@
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
         </dependency>
+        <dependency><!-- override version from s3fs to avoid security flaw -->
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+        </dependency>
         <dependency>
             <!-- S3 filesystem provider for Java 7. -->
             <groupId>com.upplication</groupId>
