--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>s3sftp</artifactId>
 
-    <version>DEV-SNAPSHOT</version>
+    <version>1.1.1</version>
     <name>S3-SFTP</name>
 
     <description>SFTP Server to access an Amazon S3 Bucket</description>
