--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.kemitix.s3sftp</groupId>
         <artifactId>parent</artifactId>
-        <version>DEV-SNAPSHOT</version>
+        <version>1.1.1</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
